<resources>
    <string name="app_name">КотоТест</string>
    <string name="cancel">Отмена</string>
    <string name="confirm">Подтвердить</string>
    <string name="great">Отлично</string>
    <string name="back">Назад</string>
    <string name="icon_coins_content_description">Монеты</string>
    <string name="close_dialog_content_description">Закрытие диалога</string>
    <string name="play">Играть</string>
    <string name="to_level_selection">К выбору уровня</string>
    <string name="loading_ad_title">Загрузка</string>
    <string name="loading_ad">Загружаем рекламу…\nПожалуйста, не закрывайте диалог</string>
    <string name="failed_to_load_rewarded_ad_title">Ошибка</string>
    <string name="failed_to_load_rewarded_ad">Не удалось загрузить рекламу</string>
    <string name="settings">Настройки</string>
    <string name="introduction_card_1_title">Добро пожаловать</string>
    <string name="introduction_card_1_text">Приветствуем вас в нашей викторине о котах, кошках и котятах!\nДавайте кратко пройдёмся по основным аспектам игры.</string>
    <string name="introduction_card_2_title">Уровни сложности</string>
    <string name="introduction_card_2_text">Вопросы разделены на 7 уровней сложности.\nПройденные вопросы будут сохраняться в отдельном уровне.</string>
    <string name="introduction_card_3_title">Монеты</string>
    <string name="introduction_card_3_text">За правильные ответы вы будете получать монеты, которые начисляются после окончания теста.\nС их помощью можно открывать уровни и использовать подсказки.</string>
    <string name="introduction_card_4_title">Удобный формат</string>
    <string name="introduction_card_4_text">Обычно тест состоит из 6 вопросов выбранного уровня сложности.\nИ не переживайте, если вы неправильно ответите на вопрос, то обязательно встретите его снова!</string>
    <string name="next">Далее</string>
    <string name="without_quiz_hints">Без подсказок</string>
    <string name="reset_progress">Сбросить прогресс</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="for_sharing_result">Мной было пройдено %1$d вопросов! А сколько сможете вы?</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=com.justcircleprod.catquiz</string>
    <string name="developers_and_licenses">Разработчики и лицензии</string>
    <string name="rate_app">Оценить приложение</string>
    <string name="developers">Разработчики</string>
    <string name="developers_content_description">JustCircle Prod.</string>
    <string name="licenses">Лицензии</string>
    <string name="level_opening_sound">Звук открытия уровня</string>
    <string name="reset_progress_dialog_title">Сброс прогресса</string>
    <string name="reset_confirmation_question">Вы действительно хотите сбросить ваш прогресс?</string>
    <string name="reset">Сбросить</string>
    <string name="progress_was_reset_dialog_title">Прогресс сброшен</string>
    <string name="progress_was_reset">Прогресс успешно сброшен</string>
    <string name="loading_levels">Загрузка…</string>
    <string name="levels_users_coins_quantity">У вас %1$d</string>
    <string name="passed_questions_level_name">Пройденные вопросы</string>
    <string name="level_1_name">Уровень 1</string>
    <string name="level_2_name">Уровень 2</string>
    <string name="level_3_name">Уровень 3</string>
    <string name="level_4_name">Уровень 4</string>
    <string name="level_5_name">Уровень 5</string>
    <string name="level_6_name">Уровень 6</string>
    <string name="level_7_name">Уровень 7</string>
    <string name="level_progress">%1$d/%2$d</string>
    <string name="locked_level_icon_content_description">Закрытый уровень</string>
    <string name="open_for_n_coins">Открыть за %1$d</string>
    <string name="unlock_level_dialog_title">Открытие уровня</string>
    <string name="unlock_level_confirmation">Вы уверены, что хотите открыть этот уровень?</string>
    <string name="unlock">Открыть</string>
    <string name="not_enough_coins_title">Недостаточно монет</string>
    <string name="watch_ad">Посмотреть</string>
    <string name="you_dont_have_enough_coins">Вам не хватает</string>
    <string name="do_you_want_to_watch_an_ad_to_get_coins">Хотите посмотреть рекламу, чтобы получить награду?</string>
    <string name="reward_received_title">Награда начислена</string>
    <string name="reward_received">Вам начислено</string>
    <string name="tv_loading_questions_text">Подготавливаем самые интересные вопросы…</string>
    <string name="tv_out_of_questions_hint_text">Похоже, вы ответили на все вопросы данного уровня!\nВы можете встретить их снова на уровне \"Пройденные вопросы\".</string>
    <string name="quiz_question_worth_label">За вопрос: %1$d</string>
    <string name="quiz_users_coins_quantity">У вас: %1$d</string>
    <string name="image_for_question_description">Вопрос с изображением</string>
    <string name="video_for_question_description">Вопрос с видео</string>
    <string name="audio_question_content_description">Аудио вопрос</string>
    <string name="hints">Подсказки</string>
    <string name="remove_2_options">Убрать 2 варианта</string>
    <string name="right_answer">Правильный ответ</string>
    <string name="tv_loading_result_text">Подсчитываем монеты…</string>
    <string name="you_got">Вы получили</string>
    <string-array name="texts_for_bad_result">
        <item>Мы в вас верим!</item>
        <item>Вы сможете!</item>
        <item>Верьте в себя!</item>
        <item>В следующий раз получится!</item>
        <item>Не сдавайтесь!</item>
    </string-array>
    <string-array name="texts_for_good_result">
        <item>Отлично получается!</item>
        <item>Вы молодец!</item>
        <item>Не сдавайтесь!</item>
    </string-array>
    <string-array name="texts_for_best_result">
        <item>Ура!</item>
        <item>Поздравляем!</item>
        <item>Вы молодец!</item>
        <item>Мы не сомневались!</item>
    </string-array>
    <string name="continue_quiz">Продолжить прохождение</string>
    <string name="double_coins">Удвоить монеты</string>
    <string name="do_you_want_to_watch_an_ad_to_double_coins">Хотите посмотреть рекламу, чтобы удвоить полученные монеты?</string>
    <string name="double_coins_quantity_with_placeholder">%1$d x 2</string>
    <string name="coins_doubled_title">Монеты удвоены</string>
    <string name="coins_doubled">Полученные монеты были удвоены</string>
    <string name="level_1_question_1_first_option">Домашняя короткошёрстная</string>
    <string name="level_1_question_1_second_option">Шотландская вислоухая</string>
    <string name="level_1_question_1_third_option">Бенгальская</string>
    <string name="level_1_question_1_fourth_option">Ламбкин</string>
    <string name="level_1_question_2_first_option">Персидская</string>
    <string name="level_1_question_2_second_option">Британская короткошёрстная</string>
    <string name="level_1_question_2_third_option">Экзотическая короткошёрстная</string>
    <string name="level_1_question_2_fourth_option">Американский Рингтейл</string>
    <string name="level_1_question_3_first_option">Сибирская</string>
    <string name="level_1_question_3_second_option">Норвежская лесная</string>
    <string name="level_1_question_3_third_option">Шотландская вислоухая</string>
    <string name="level_1_question_3_fourth_option">Скукум</string>
    <string name="level_1_question_4_first_option">Чаузи</string>
    <string name="level_1_question_4_second_option">Лаперм</string>
    <string name="level_1_question_4_third_option">Тойгер</string>
    <string name="level_1_question_4_fourth_option">Сибирская</string>
    <string name="level_1_question_5_first_option">Персидская</string>
    <string name="level_1_question_5_second_option">Сфинкс</string>
    <string name="level_1_question_5_third_option">Пиксибоб</string>
    <string name="level_1_question_5_fourth_option">Корниш-рекс</string>
    <string name="level_1_question_6_first_option">Сиамская</string>
    <string name="level_1_question_6_second_option">Мейн-кун</string>
    <string name="level_1_question_6_third_option">Девон-рекс</string>
    <string name="level_1_question_6_fourth_option">Фолдекс</string>
    <string name="level_1_question_7_first_option">Норвежская лесная</string>
    <string name="level_1_question_7_second_option">Ориентальная</string>
    <string name="level_1_question_7_third_option">Сиамская</string>
    <string name="level_1_question_7_fourth_option">Манчкин длинношёрстный</string>
    <string name="level_1_question_8_first_option">Домашняя короткошёрстная</string>
    <string name="level_1_question_8_second_option">Турецкий ван</string>
    <string name="level_1_question_8_third_option">Канаани</string>
    <string name="level_1_question_8_fourth_option">Русская голубая</string>
    <string name="level_1_question_9">Какой запах обычно не любят кошки?</string>
    <string name="level_1_question_9_first_option">Рыбы</string>
    <string name="level_1_question_9_second_option">Мяты</string>
    <string name="level_1_question_9_third_option">Ванили</string>
    <string name="level_1_question_9_fourth_option">Цитрусовых</string>
    <string name="level_1_question_10">Как называется медленное моргание у кошки?</string>
    <string name="level_1_question_10_first_option">Кошачье подмигивание</string>
    <string name="level_1_question_10_second_option">Кошачий поцелуй</string>
    <string name="level_1_question_10_third_option">Кошачье запугивание</string>
    <string name="level_1_question_10_fourth_option">Кошачье выпрашивание</string>
    <string name="level_1_question_11">Сколько часов в день обычно спят кошки?</string>
    <string name="level_1_question_11_first_option">10–14</string>
    <string name="level_1_question_11_second_option">14–16</string>
    <string name="level_1_question_11_third_option">16–20</string>
    <string name="level_1_question_11_fourth_option">6–10</string>
    <string name="level_1_question_12">Какой продукт из перечисленных токсичен для кошек?</string>
    <string name="level_1_question_12_first_option">Лук</string>
    <string name="level_1_question_12_second_option">Курица</string>
    <string name="level_1_question_12_third_option">Лосось</string>
    <string name="level_1_question_12_fourth_option">Огурец</string>
    <string name="level_1_question_13">Какое поведение кошки указывает на то, что она хочет поиграть?</string>
    <string name="level_1_question_13_first_option">Хвост в форме знака вопроса</string>
    <string name="level_1_question_13_second_option">Прижатые уши</string>
    <string name="level_1_question_13_third_option">Шипение</string>
    <string name="level_1_question_13_fourth_option">Виляние хвостом</string>
    <string name="level_1_question_14">Какой вид общения кошки развили специально для общения с людьми?</string>
    <string name="level_1_question_14_first_option">Мурлыканье</string>
    <string name="level_1_question_14_second_option">Мяуканье</string>
    <string name="level_1_question_14_third_option">Шипение</string>
    <string name="level_1_question_14_fourth_option">Рычание</string>
    <string name="level_1_question_15">Какой язык у кошек?</string>
    <string name="level_1_question_15_first_option">Гладкий</string>
    <string name="level_1_question_15_second_option">Раздвоенный</string>
    <string name="level_1_question_15_third_option">Шершавый</string>
    <string name="level_1_question_15_fourth_option">Липкий</string>
    <string name="level_1_question_16">Какой язык тела у кошки обычно означает страх или агрессию?</string>
    <string name="level_1_question_16_first_option">Мурлыканье</string>
    <string name="level_1_question_16_second_option">Поднятый хвост</string>
    <string name="level_1_question_16_third_option">Прижатые уши</string>
    <string name="level_1_question_16_fourth_option">Медленное моргание</string>
</resources>