<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/card_background"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/inner_padding">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/introduction_animation_size"
            android:layout_marginBottom="@dimen/introduction_animation_margin_bottom"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/introduction_card_title_margin_bottom"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/gray_text_color"
                android:textSize="@dimen/introduction_card_text_size"
                android:textStyle="bold"
                tools:text="@tools:sample/lorem" />

            <ImageView
                android:id="@+id/title_icon_coins"
                android:layout_width="@dimen/introduction_card_title_icon_coins_size"
                android:layout_height="@dimen/introduction_card_title_icon_coins_size"
                android:layout_marginStart="@dimen/icon_coins_margin_start"
                android:contentDescription="@string/icon_coins_content_description"
                android:src="@drawable/icon_coins"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/gray_text_color"
            android:textSize="@dimen/introduction_card_text_text_size"
            tools:text="@string/introduction_card_3_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/introduction_button_margin_top"
            android:backgroundTint="@color/btn_background"
            android:elevation="@dimen/button_elevation"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="@dimen/button_padding_horizontal"
            android:paddingVertical="@dimen/button_padding_vertical"
            android:stateListAnimator="@null"
            android:text="@string/next"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/button_text_size"
            android:visibility="gone"
            app:cornerRadius="@dimen/button_corner_radius"
            app:rippleColor="@color/btn_ripple_color"
            app:strokeColor="@color/btn_stroke_color"
            app:strokeWidth="@dimen/button_stroke_width" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/introduction_button_margin_top"
            android:backgroundTint="@color/second_btn_color"
            android:elevation="@dimen/button_elevation"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="@dimen/button_padding_horizontal"
            android:paddingVertical="@dimen/button_padding_vertical"
            android:stateListAnimator="@null"
            android:text="@string/play"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/second_btn_text_color"
            android:textSize="@dimen/button_text_size"
            android:visibility="gone"
            app:cornerRadius="@dimen/button_corner_radius"
            app:rippleColor="@color/second_btn_ripple_color" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>